deployments/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
